// Original file: ../proto/products/service.proto


export interface ExtendedProduct {
  'product_id'?: (number);
  'product_name'?: (string);
  'price'?: (number);
  'quantity'?: (number);
  'category_id'?: (number);
  'brand_id'?: (number);
}

export interface ExtendedProduct__Output {
  'product_id': (number);
  'product_name': (string);
  'price': (number);
  'quantity': (number);
  'category_id': (number);
  'brand_id': (number);
}
